# ha

./: CMakeLists.txt  HA_SRC_ha.txt  README.md  makefile.bcc  makefile.bsd  md_funcs.txt
.github/website/: index.html
.github/workflows/: c-cpp.yml  c-nmake.yml  cmake-multi-platform.yml  gh-pages.yml  jekyll-gh-pages.yml  msbuild.yml
c/: Makefile  acoder.c.orig  ha.c
docs/: _config.yml
nix/: Makefile  info.c  info.txt  machine.c  machine.h
pc/: machine.c  machine.h
win_msvc/: README  dir.h  dirent.c  dirent.h  ha.dep  ha.dsp  ha.dsw  ha.mak  machine.c  machine.h
